[tool.poetry]
name = "truelle"
version = "0.1.0"
description = "A tiny web scraping library"
authors = ["Jonathan Geslin <jonathan.geslin@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.28.1"
parsel = "^1.6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
